--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -1,5 +1,5 @@
 name: Build LaTeX document
-on: 
+on:
   push:
     branches:
       - main
@@ -15,7 +15,9 @@ jobs:
           compiler: pdflatex
           args: -synctex=1 -interaction=nonstopmode -file-line-error -recorder -output-directory="./memoria"  "./memoria/main.tex"
           root_file: main.tex
-        - uses: actions/upload-artifact@v2
-          with:
-            name: PDF
-            path: ./memoria/main.pdf
+      - name: Upload PDF document
+        uses: actions/upload-artifact@v2
+        with:
+          name: PDF
+          path: ./memoria/main.pdf
+          
