--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -14,10 +14,9 @@ jobs:
         with:
           compiler: pdflatex
           args: -synctex=1 -interaction=nonstopmode -file-line-error -recorder -output-directory="./memoria"  "./memoria/main.tex"
-          root_file: main.tex
+          root_file: ./memoria/main.tex
       - name: Upload PDF document
         uses: actions/upload-artifact@v2
         with:
           name: PDF
           path: ./memoria/main.pdf
-          
