--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -19,4 +19,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: PDF
-          path: ./memoria/main.pdf
+          path: main.pdf
