--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -9,13 +9,14 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
-      - run: cd memoria  
       - name: Compile LaTeX document
+        working-directory: ./memoria
         uses: xu-cheng/latex-action@v2
         with:
           #args: -synctex=1 -interaction=nonstopmode -file-line-error -recorder -output-directory=memoria
           root_file: main.tex
       - name: Upload PDF document
+        working-directory: ./memoria
         uses: actions/upload-artifact@v2
         with:
           name: PDF
