--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -9,11 +9,13 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
+      - run: cd memoria
+      - run: echo `ls`
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
           args: -pdf
-          root_file: ./memoria/main.tex
+          root_file: main.tex
       - name: Upload PDF document
         uses: actions/upload-artifact@v2
         with:
